--- a/src/App.css
+++ b/src/App.css
@@ -498,6 +498,17 @@ p {
   opacity: 1;
 }
 
+.grid-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.grid-wrapper svg {
+  width: 100%;
+  height: 50%;
+}
+
 .top-grid-projects {
   background-image: url(/public/assets/various/plus.png);
   background-repeat: repeat;
